# 410_proj4_SKELETON

./: CMakeLists.txt  in4.txt
baker/: Baker.cpp
logger/: logger.cpp
src/: 410_proj4.cpp
waiter/: waiter.cpp
